--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ body {
 
     <!-- Sidebar -->
     <div class="sidebar">
-        <img class="avatar" src="https://i.pravatar.cc/150?img=32">
+          <img class="avatar" src="https://i.imgur.com/egbQs93.jpeg" alt="Ảnh đại diện">
         <h2>Nguyễn Quốc Linh</h2>
         <p>nguyenlinh@gmail.com</p>
 
@@ -215,3 +215,4 @@ body {
 
 </body>
 </html>
+
